syntax = "proto3";

package scenes;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Scenes {
    rpc List (ListScenesRequest) returns (ListScenesResponse) {
        option (google.api.http) = {
            get: "/v1/scenes"
        };
    }
    rpc Get (GetSceneRequest) returns (Scene) {
        option (google.api.http) = {
            get: "/v1/scenes/{scene_id}"
        };
    }
    rpc Create (CreateSceneRequest) returns (Scene) {
        option (google.api.http) = {
            post: "/v1/scenes"
            body: "scene"
        };
    }
    rpc Update (UpdateSceneRequest) returns (Scene) {
        option (google.api.http) = {
            put: "/v1/scenes/{scene_id}"
            body: "scene"
        };
    }
    rpc Delete (DeleteSceneRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/scenes/{scene_id}"
        };
    }
}

message Scene {
    string id = 1;
    string project_id = 2;
    string name = 3;
}

message ListScenesRequest {
    int32 page_size = 1;
    string page_token = 2;
}

message ListScenesResponse {
    repeated Scene scenes = 1;
    string next_page_token = 2;
}

message GetSceneRequest {
    string id = 1;
}

message CreateSceneRequest {
    Scene scene = 1;
}

message UpdateSceneRequest {
    string id = 1;
    Scene scene = 2;
}

message DeleteSceneRequest {
    string id = 1;
}
